# docs/swagger.yaml
@@ -12,6 +12,8 @@ definitions:
         type: integer
       name:
         type: string
+      ownerId:
+        type: integer
       sex:
         type: string
     type: object
@@ -23,6 +25,8 @@ definitions:
         type: string
       diagnosisId:
         type: integer
+      doctorId:
+        type: integer
       ownerId:
         type: integer
       reason:
@@ -32,6 +36,8 @@ definitions:
     type: object
   model.DiagnosisToUpdate:
     properties:
+      doctorId:
+        type: integer
       name:
         type: string
     type: object
@@ -47,6 +53,8 @@ definitions:
         type: integer
       name:
         type: string
+      ownerId:
+        type: integer
       sex:
         type: string
     type: object
@@ -58,6 +66,8 @@ definitions:
         type: string
       diagnosisId:
         type: integer
+      doctorId:
+        type: integer
       ownerId:
         type: integer
       reason:
@@ -67,6 +77,8 @@ definitions:
     type: object
   model.SwaggerDiagnosis:
     properties:
+      doctorId:
+        type: integer
       name:
         type: string
     type: object
@@ -76,7 +88,11 @@ definitions:
         type: integer
       diagnosisId:
         type: integer
+      doctorId:
+        type: integer
       finish:
+        type: string
+      name:
         type: string
       price:
         type: number
@@ -87,7 +103,11 @@ definitions:
         type: integer
       diagnosisId:
         type: integer
+      doctorId:
+        type: integer
       finish:
+        type: string
+      name:
         type: string
       price:
         type: number
@@ -134,7 +154,7 @@ info:
   contact: {}
   description: This is a server for owners and vets
   title: VET API
-  version: "14.87"
+  version: "14.89"
 paths:
   /animal:
     get:
